--- a/src/coflo.conf.in
+++ b/src/coflo.conf.in
@@ -15,12 +15,16 @@
 # You should have received a copy of the GNU General Public License along with
 # CoFlo.  If not, see <http://www.gnu.org/licenses/>.
 
+[file.info]
+# File format version of this config file.
+format_version=1.0
+
 ###
 ### Programs found during configure.
 ###
 
 # The default compiler.
-PROG_ABSPATH_COMPILER='@PROG_ABSPATH_COMPILER@'
+#PROG_ABSPATH_COMPILER='@PROG_ABSPATH_COMPILER@'
 
 # The Graphviz dot program.
-PROG_ABSPATH_DOT='@PROG_ABSPATH_DOT@'
+#PROG_ABSPATH_DOT='@PROG_ABSPATH_DOT@'
