(Issue #16) :  Improve HTML output cpio files gone, building a single tarball for report boilerplate.

--- a/src/templates/Makefile.am
+++ b/src/templates/Makefile.am
@@ -23,9 +23,7 @@ jquery_ui_layout_dir = $(top_srcdir)/third_party/jquery-ui-layout-plugin
 templates = index.template.html \
 	css/index.template.css \
 	js/coflo.resizer.js \
-	js/jquery.jstree.js \
-	js/jquery-1.8.2.js \
-	js/jquery-ui.js
+	js/jquery.jstree.js
 
 #intermediate_cpp_files_1 = $(templates:%.html=%.html.cpp)
 #intermediate_cpp_files_2 = $(intermediate_cpp_files_1:%.css=%.css.cpp)
@@ -34,12 +32,10 @@ templates = index.template.html \
 intermediate_cpp_files = index.template.html.cpp \
 	css/index.template.css.cpp \
 	js/coflo.resizer.js.cpp \
-	js/jquery.jstree.js.cpp \
-	js/jquery-1.8.2.js.cpp \
-	js/jquery-ui.js.cpp
+	js/jquery.jstree.js.cpp
 	
 # Files that we'll need to tell Automake to clean.
-intermediate_clean_files =  css_dark_hive.cpio  css_dark_hive.cpio.cpp jquery_ui_layout.cpio jquery_ui_layout.cpio.cpp
+intermediate_clean_files = jquery_ui_layout.cpio jquery_ui_layout.cpio.cpp
 
 test1:
 	echo $(intermediate_cpp_files)
@@ -52,9 +48,7 @@ noinst_LIBRARIES = libtemplates.a
 # The .cpp files below are all built sources.
 libtemplates_a_SOURCES = templates.h FileTemplate.h FileTemplate.cpp $(intermediate_cpp_files)
 #EXTRA_libtemplates_a_SOURCES = $(top_builddir)/third_party/css_dark_hive.cpio $(top_builddir)/third_party/jquery_ui_layout.cpio
-libtemplates_a_LIBADD = $(builddir)/css_dark_hive.cpio.$(OBJEXT) \
-	$(builddir)/jquery_ui_layout.cpio.$(OBJEXT) \
-	$(builddir)/jquery_ui.tar.$(OBJEXT)
+libtemplates_a_LIBADD = $(builddir)/report_boilerplate.tar.$(OBJEXT)
 
 # Note that we don't list the template files in the _SOURCES Automake variable, even though they are sources
 # for the libtemplates.a library.  If we do so, Automake generates dependency tracking files (*.Po) in the source tree
@@ -88,13 +82,13 @@ ARRAY_IDENTIFIER="$$(echo $${RELATIVE_SOURCE_NAME} | grep -E -o "([^/]+/){0,$${M
 :;{ \
 echo "// Generated file, do not edit." && \
 echo "// File generated $$(date)" ; \
-} > "$@.tmp" && \
+} > "$@-temp" && \
 : Generate the file, fixing up the identifier names in the process. && \
 $(XXD) -i "$<" | \
 	$(SED) -r "s,(unsigned char )([^ \[]+),extern const unsigned char $${ARRAY_IDENTIFIER}," | \
 	$(SED) -r "s,(unsigned int )([^ =]+),\1$${ARRAY_IDENTIFIER}_len," | \
-	$(SED) -r 's/};/, 0x00};/' >> "$@.tmp" && \
-mv "$@.tmp" "$(srcdir)/$${RELATIVE_SOURCE_NAME}.cpp"
+	$(SED) -r 's/};/, 0x00};/' >> "$@-temp" && \
+mv "$@-temp" "$@"
 
 
 # Rule to convert *.css files to *.css.cpp files.
@@ -109,16 +103,7 @@ mv "$@.tmp" "$(srcdir)/$${RELATIVE_SOURCE_NAME}.cpp"
 .js.js.cpp:
 	MAX_DIRS=1 && $(recipie_any_file_to_cpp_array)
 	
-.cpio.cpio.cpp:
-	MAX_DIRS=0 && $(recipie_any_file_to_cpp_array)
-
-css_dark_hive.cpio.cpp: css_dark_hive.cpio
-	MAX_DIRS=0 && $(recipie_any_file_to_cpp_array)
-	
-jquery_ui_layout.cpio.cpp: jquery_ui_layout.cpio
-	MAX_DIRS=0 && $(recipie_any_file_to_cpp_array)
-	
-jquery_ui.tar.cpp: jquery_ui.tar
+report_boilerplate.tar.cpp: $(top_builddir)/third_party/report_boilerplate.tar
 	MAX_DIRS=0 && $(recipie_any_file_to_cpp_array)
 
 # Some of the sources we need are in the third_party subdirectory.
@@ -134,19 +119,10 @@ recipie_copy_if_change = TEMPFILE_NAME="$$(mktemp)" && \
 $(srcdir)/js/jquery.jstree.js: $(top_srcdir)/third_party/jstree_pre1.0_fix_1/jquery.jstree.js
 	$(recipie_copy_if_change)
 
-$(srcdir)/js/jquery-1.8.2.js: $(top_srcdir)/third_party/jquery/jquery-1.8.2.js
-	$(recipie_copy_if_change)
-
-$(srcdir)/js/jquery-ui.js: $(top_srcdir)/third_party/jquery-ui-1.9.1.custom/js/jquery-ui-1.9.1.custom.js
-	$(recipie_copy_if_change)
-	
 # Files which have been created by the Makefile in the ../third_party directory.
 
-jquery_ui.tar: $(top_builddir)/third_party/jquery_ui.tar
-	$(recipie_copy_if_change)
+#report_boilerplate.tar: $(top_builddir)/third_party/report_boilerplate.tar
+#	$(recipie_copy_if_change)
 	
-css_dark_hive.cpio: $(top_builddir)/third_party/css_dark_hive.cpio
-	$(recipie_copy_if_change)
-
-jquery_ui_layout.cpio: $(top_builddir)/third_party/jquery_ui_layout.cpio
-	$(recipie_copy_if_change)
+#jquery_ui_layout.cpio: $(top_builddir)/third_party/jquery_ui_layout.cpio
+#	$(recipie_copy_if_change)
